# order-reconciler

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
scripts/: install-weekly-task.ps1  run-weekly.ps1
src/knet_reconciler/: cli.py  config.py  db.py  export.py  gmail_client.py  reconcile.py  tracking.py
src/knet_reconciler/parsers/: __init__.py  _named.py  adidas.py  base.py  finishline.py  footlocker.py  generic.py  goat.py  jdsports.py  knet.py  nike.py  shopify.py  stockx.py
src/knet_reconciler/webui/: __init__.py  app.py  template.py
tests/: test_integration.py  test_parsers.py  test_tracking.py  test_webui.py
tests/fixtures/generic/: Order #737123 confirmed.eml  Order #94802 confirmed.eml
tests/fixtures/knet/: README.md  Your Incoming Shipment Has Been Checked In.eml  Your Incoming Shipment Has Been Received (1).eml  Your Incoming Shipment Has Been Received (2).eml  Your Incoming Shipment Has Been Received.eml
